blob commit fix

--- a/code/digitspan/visualize_ecg_events.ipynb
+++ b/code/digitspan/visualize_ecg_events.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# Try to use interactive backend if available, otherwise inline\n",
     "try:\n",
-    "    %matplotlib widget\n",
+    "    %matplotlib tk\n",
     "except:\n",
     "    %matplotlib inline"
    ]
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Data folder: /home/martin/RESEARCH/thesis/code/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
+      "📂 Data folder: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "data_folder = data_path / 'ecg'\n",
     "\n",
     "subject_id = 'sub-032'\n",
-    "task = 'rest'\n",
+    "task = 'memory'\n",
     "\n",
     "print(f\"📂 Data folder: {data_folder}\")"
    ]
@@ -58,14 +58,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⏳ Loading sub-032_task-rest_ecg.set...\n"
+      "⏳ Loading sub-032_task-memory_ecg.set...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martin/miniforge3/envs/brain-heart/lib/python3.11/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
+      "/home/martin/miniforge3/envs/neurocomp/lib/python3.12/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
       "  warn(\n"
      ]
     },
@@ -92,9 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_140639/1203144154.py:10: RuntimeWarning: Limited 1 annotation(s) that were expanding outside the data range.\n",
-      "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n",
-      "/tmp/ipykernel_140639/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
+      "/tmp/ipykernel_184409/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n"
      ]
     }
@@ -123,25 +121,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⏳ Loading events from sub-032_task-rest_events.tsv...\n",
+      "⏳ Loading events from sub-032_task-memory_events.tsv...\n",
       "Events found:\n",
-      "      onset  duration    sample trial_type  response_time  stim_file  \\\n",
-      "0   -0.0005   18441.0      -0.5     STATUS            NaN        NaN   \n",
-      "1  227.0790       1.0  227079.0     STATUS            NaN        NaN   \n",
+      "     onset  duration  sample  \\\n",
+      "0    0.000       NaN       0   \n",
+      "1  684.496       1.0  684496   \n",
+      "2  686.559       1.0  686559   \n",
+      "3  688.587       1.0  688587   \n",
+      "4  690.630       1.0  690630   \n",
       "\n",
-      "         value  \n",
-      "0     boundary  \n",
-      "1  eyes opened  \n",
-      "Event values: ['boundary' 'eyes opened']\n",
+      "                                          trial_type  response_time  \\\n",
+      "0                                             STATUS            NaN   \n",
+      "1  control 01/13: listen to digit 1 (first) in 13...            NaN   \n",
+      "2  control 02/13: listen to digit 2 in 13 digit s...            NaN   \n",
+      "3  control 03/13: listen to digit 3 in 13 digit s...            NaN   \n",
+      "4  control 04/13: listen to digit 4 in 13 digit s...            NaN   \n",
+      "\n",
+      "   stim_file     value  \n",
+      "0        NaN  boundary  \n",
+      "1        NaN    500113  \n",
+      "2        NaN    500213  \n",
+      "3        NaN    500313  \n",
+      "4        NaN    500413  \n",
+      "Event values: ['boundary' '500113' '500213' '500313' '500413' '500513' '500613' '500713'\n",
+      " '500813' '500913' '501013' '501113' '501213' '501313' '500105' '500205'\n",
+      " '500305' '500405' '500505' '500109' '500209' '500309' '500409' '500509'\n",
+      " '500609' '500709' '500809' '500909' '6001051' '6002051' '6003051'\n",
+      " '6004051' '6005051' '6001091' '6002091' '6003091' '6004090' '6005090'\n",
+      " '6006090' '6007090' '6008090' '6009090' '6001130' '6002130' '6003130'\n",
+      " '6004130' '6005130' '6006130' '6007130' '6008130' '6009130' '6010130'\n",
+      " '6011130' '6012130' '6013130' '6004091' '6005091' '6006091' '6001090'\n",
+      " '6001131' '6002131' '6003131' '6004131' '6005131' '6006131' '6007091'\n",
+      " '6008091' '6008131' '6003090' '6009091' '6002090' '6007131' '6009131']\n",
       "✅ Annotations added to raw data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_140639/2657081329.py:29: RuntimeWarning: Limited 2 annotation(s) that were expanding outside the data range.\n",
-      "  raw.set_annotations(annotations)\n"
      ]
     }
    ],
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "4f4279bf",
    "metadata": {},
    "outputs": [
@@ -192,7 +204,7 @@
        "2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "c38e43ed",
    "metadata": {},
    "outputs": [
@@ -232,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "bde9af1c",
    "metadata": {},
    "outputs": [
@@ -240,18 +252,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n"
+      "NOTE: pick_channels() is a legacy function. New code should use inst.pick(...).\n",
+      "Using qt as 2D backend.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "ERROR:root:Cannot activate multiple GUI eventloops\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d78437a30>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7ff39cca1010>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -264,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4dd8121e",
    "metadata": {},
    "outputs": [
@@ -276,14 +311,43 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using qt as 2D backend.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
+      "ERROR:root:Cannot activate multiple GUI eventloops\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d786ef640>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fb83beb5880>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -292,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "699031ae",
    "metadata": {},
    "outputs": [
@@ -300,41 +364,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📊 Plotting data... \n",
-      "Using qt as 2D backend.\n"
+      "📊 Plotting data... \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n"
+      "ERROR:root:Cannot activate multiple GUI eventloops\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7f4d93cc3c70>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fbf33851b50>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Channels marked as bad:\n",
-      "none\n",
-      "Channels marked as bad:\n",
-      "none\n",
-      "Channels marked as bad:\n",
-      "none\n",
-      "Channels marked as bad:\n",
-      "none\n",
-      "Channels marked as bad:\n",
-      "none\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -349,7 +407,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "brain-heart",
+   "display_name": "neurocomp",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
