Fix subject ID and improve error handling in ECG processing notebook

--- a/code/digitspan/transcriptor_set_parquet_task.ipynb
+++ b/code/digitspan/transcriptor_set_parquet_task.ipynb
@@ -10,33 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "04808e59",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/martin/miniforge3/envs/neurocomp/lib/python3.12/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
-      "  warn(\n",
-      "/tmp/ipykernel_6985/1478131265.py:22: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
-      "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Events saved: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/code/digitspan/task_data/sub-032_task-memory_events.parquet\n",
-      "Done sub-032: 7395320 samples @ 1000.0 Hz\n",
-      "ECG saved to: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/code/digitspan/task_data/sub-032_task-memory_ecg_task.parquet\n"
+     "ename": "FileNotFoundError",
+     "evalue": "Missing file: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/data/ds003838/sub-033/ecg/sub-033_task-memory_ecg.set",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     19\u001b[39m subject_output.mkdir(parents=\u001b[38;5;28;01mTrue\u001b[39;00m, exist_ok=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m set_path.exists():\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mMissing file: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mset_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     24\u001b[39m raw = mne.io.read_raw_eeglab(set_path, preload=\u001b[38;5;28;01mTrue\u001b[39;00m, verbose=\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[32m     25\u001b[39m sfreq = raw.info[\u001b[33m\"\u001b[39m\u001b[33msfreq\u001b[39m\u001b[33m\"\u001b[39m]\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: Missing file: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/data/ds003838/sub-033/ecg/sub-033_task-memory_ecg.set"
      ]
     }
    ],
    "source": [
     "# Standalone processing for sub-032 only\n",
     "from pathlib import Path\n",
+    "import shutil\n",
     "import mne\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -47,11 +40,12 @@
     "output_folder = scripts_folder / \"task_data\"\n",
     "output_folder.mkdir(exist_ok=True)\n",
     "\n",
-    "subject_id = \"sub-032\"\n",
+    "subject_id = \"sub-033\"\n",
     "task = \"memory\"  # BIDS task label\n",
     "ecg_folder = dataset_path / subject_id / \"ecg\"\n",
     "set_path = ecg_folder / f\"{subject_id}_task-{task}_ecg.set\"\n",
-    "events_tsv = ecg_folder / f\"{subject_id}_task-{task}_events.tsv\"\n",
+    "subject_output = output_folder / subject_id\n",
+    "subject_output.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "if not set_path.exists():\n",
     "    raise FileNotFoundError(f\"Missing file: {set_path}\")\n",
@@ -85,19 +79,25 @@
     "})\n",
     "\n",
     "parquet_filename = f\"{subject_id}_task-{task}_ecg_task.parquet\"\n",
-    "output_path = output_folder / parquet_filename\n",
+    "output_path = subject_output / parquet_filename\n",
     "df.to_parquet(output_path, index=False)\n",
     "\n",
-    "if events_tsv.exists():\n",
-    "    events_df = pd.read_csv(events_tsv, sep=\"\\t\")\n",
-    "    events_out = output_folder / f\"{subject_id}_task-{task}_events.parquet\"\n",
-    "    events_df.to_parquet(events_out, index=False)\n",
-    "    print(f\"Events saved: {events_out}\")\n",
+    "# Copy all other task files (no transcription) into the subject output folder\n",
+    "copied = []\n",
+    "for f in ecg_folder.glob(f\"{subject_id}_task-{task}_*\"):\n",
+    "    if f.suffix == \".set\":\n",
+    "        continue\n",
+    "    dest = subject_output / f.name\n",
+    "    shutil.copy2(f, dest)\n",
+    "    copied.append(dest.name)\n",
+    "\n",
+    "if copied:\n",
+    "    print(f\"Copied: {', '.join(sorted(copied))}\")\n",
     "else:\n",
-    "    print(\"Events file not found; skipping events export\")\n",
+    "    print(\"No extra task files found to copy\")\n",
     "\n",
     "print(f\"Done {subject_id}: {df.shape[0]} samples @ {sfreq} Hz\")\n",
-    "print(f\"ECG saved to: {output_path}\")"
+    "print(f\"ECG parquet saved to: {output_path}\")"
    ]
   },
   {
@@ -110,6 +110,7 @@
     "import mne\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "\n",
     "# --- 1. Setup Paths ---\n",
@@ -153,6 +154,8 @@
     "for subject_path in subject_folders:\n",
     "    subject_id = subject_path.name\n",
     "    ecg_folder = subject_path / 'ecg'\n",
+    "    subject_output = output_folder / subject_id\n",
+    "    subject_output.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    # Check if ECG folder exists\n",
     "    if not ecg_folder.exists():\n",
@@ -163,7 +166,6 @@
     "    # Build file paths\n",
     "    set_filename = f\"{subject_id}_task-{task}_ecg.set\"\n",
     "    set_path = ecg_folder / set_filename\n",
-    "    events_tsv = ecg_folder / f\"{subject_id}_task-{task}_events.tsv\"\n",
     "\n",
     "    if not set_path.exists():\n",
     "        print(f'⏭️  {subject_id}: No .set file, skipping')\n",
@@ -208,22 +210,27 @@
     "            'ecg_nk':  ecg_nk    # raw volts, polarity-fixed\n",
     "        })\n",
     "\n",
-    "        # Save as Parquet\n",
+    "        # Save ECG as Parquet into subject folder (only transcription step)\n",
     "        parquet_filename = f\"{subject_id}_task-{task}_ecg_task.parquet\"\n",
-    "        output_path = output_folder / parquet_filename\n",
+    "        output_path = subject_output / parquet_filename\n",
     "        df.to_parquet(output_path, index=False)\n",
     "\n",
-    "        # Save events if available\n",
-    "        if events_tsv.exists():\n",
-    "            events_df = pd.read_csv(events_tsv, sep='\t')\n",
-    "            events_out = output_folder / f\"{subject_id}_task-{task}_events.parquet\"\n",
-    "            events_df.to_parquet(events_out, index=False)\n",
-    "            print(f'   Events saved: {events_out.name} ({len(events_df)} rows)')\n",
+    "        # Copy all other task files (no transcription) into the subject output folder\n",
+    "        copied = []\n",
+    "        for f in ecg_folder.glob(f\"{subject_id}_task-{task}_*\"):\n",
+    "            if f.suffix == '.set':\n",
+    "                continue\n",
+    "            dest = subject_output / f.name\n",
+    "            shutil.copy2(f, dest)\n",
+    "            copied.append(dest.name)\n",
+    "        if copied:\n",
+    "            print(f\"   Copied: {', '.join(sorted(copied))}\")\n",
     "        else:\n",
-    "            print('   Events file not found; skipping events export')\n",
+    "            print('   No extra task files found to copy')\n",
     "\n",
     "        print(f'✅ {subject_id}: Success! ({df.shape[0]} samples)')\n",
     "        print(f'   Sampling rate: {sfreq} Hz (use this in NeuroKit2)')\n",
+    "        print(f'   Saved to: {subject_output}')\n",
     "        successful += 1\n",
     "\n",
     "    except Exception as e:\n",
