Refactor ECG visualization and data handling in Jupyter notebooks
- Updated paths in `visualize_ecg_events.ipynb` to reflect new data directory structure.
- Changed execution counts for code cells to maintain consistency.
- Modified output messages to reflect changes in data loading and processing.
- Added event loading and visualization logic in `digispan_CVI_CSI.ipynb` for task-related ECG data.

--- a/code/digitspan/visualize_ecg_events.ipynb
+++ b/code/digitspan/visualize_ecg_events.ipynb
@@ -13,11 +13,7 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Try to use interactive backend if available, otherwise inline\n",
-    "try:\n",
-    "    %matplotlib tk\n",
-    "except:\n",
-    "    %matplotlib inline"
+    "# Try to use interactive backend if available, otherwise inline"
    ]
   },
   {
@@ -30,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Data folder: /home/martin/RESEARCH/thesis/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
+      "📂 Data folder: /home/martin/RESEARCH/thesis/code/brain_heart_psv_sdg/data/ds003838/sub-032/ecg\n"
      ]
     }
    ],
@@ -65,7 +61,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/martin/miniforge3/envs/neurocomp/lib/python3.12/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
+      "/home/martin/miniforge3/envs/brain-heart/lib/python3.11/site-packages/pymatreader/utils.py:179: UserWarning: Complex objects (like classes) are not supported. They are imported on a best effort base but your mileage will vary.\n",
       "  warn(\n"
      ]
     },
@@ -92,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_184409/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
+      "/tmp/ipykernel_164600/1203144154.py:10: RuntimeWarning: The data contains 'boundary' events, indicating data discontinuities. Be cautious of filtering and epoching around these events.\n",
       "  raw = mne.io.read_raw_eeglab(set_path, preload=True, verbose=False)\n"
      ]
     }
@@ -225,7 +221,7 @@
      "output_type": "stream",
      "text": [
       "[1] ['ECG']\n",
-      "[-1] ['ECG']\n"
+      "[1] ['ECG']\n"
      ]
     }
    ],
@@ -238,13 +234,12 @@
     "\n",
     "# Alternatively, pick by type after setting\n",
     "ecg_picks = mne.pick_types(raw.info, ecg=True)\n",
-    "ecg_picks = -ecg_picks\n",
     "print(ecg_picks, [raw.ch_names[i] for i in ecg_picks])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "bde9af1c",
    "metadata": {},
    "outputs": [
@@ -260,32 +255,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n",
-      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
-      "QFont::fromString: Invalid description 'Noto Sans Mono,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
-      "QFont::fromString: Invalid description 'Noto Sans,11,-1,5,400,0,0,0,0,0,0,0,0,0,0,1'\n",
-      "ERROR:root:Cannot activate multiple GUI eventloops\n"
+      "qt.qpa.plugin: Could not find the Qt platform plugin \"wayland\" in \"\"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7ff39cca1010>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x7fabc4c72050>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels marked as bad:\n",
+      "none\n"
      ]
     }
    ],
@@ -407,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neurocomp",
+   "display_name": "brain-heart",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
