--- a/code/python/digispan_CVI_CSI.ipynb
+++ b/code/python/digispan_CVI_CSI.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3f1d4f63",
    "metadata": {},
    "outputs": [
@@ -112,16 +112,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded sub-032_task-rest_ecg_rest.parquet: shape=(227081, 4), cols=['time', 'ecg_raw', 'ecg_mod', 'ecg_nk']\n",
-      "R-peaks: 306; RR count: 305\n"
+      "Loaded sub-032_task-memory_ecg_task.parquet: shape=(7395320, 4), cols=['time', 'ecg_raw', 'ecg_mod', 'ecg_nk']\n",
+      "R-peaks: 12640; RR count: 12639\n",
+      "R-peaks: 12640; RR count: 12639\n"
      ]
     }
    ],
    "source": [
     "sampling_rate = 1000\n",
-    "data_folder = Path('../digitspan/rest_data_v2')\n",
+    "data_folder = Path('../digitspan/task_data/sub-032')\n",
     "subject_id = '032'\n",
-    "parquet_file = data_folder / f'sub-{subject_id}_task-rest_ecg_rest.parquet'\n",
+    "parquet_file = data_folder / f'sub-{subject_id}_task-memory_ecg_task.parquet'\n",
     "\n",
     "if not parquet_file.exists():\n",
     "    raise FileNotFoundError(f'Missing file: {parquet_file}')\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d3ff2e74",
    "metadata": {},
    "outputs": [
@@ -159,8 +160,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outputs: CSI_out len=839, CVI_out len=839, t_out len=839\n",
-      "SD1_win mean=0.0361, SD2_win mean=0.0894\n"
+      "Outputs: CSI_out len=29516, CVI_out len=29516, t_out len=29516\n",
+      "SD1_win mean=0.0216, SD2_win mean=0.0880\n"
      ]
     }
    ],
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "03989139",
    "metadata": {},
    "outputs": [],
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "80527468",
    "metadata": {},
    "outputs": [
@@ -218,8 +219,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman SD1 vs SD2: rho=0.861, p=3.96e-84\n",
-      "Spearman CVI vs CSI: rho=0.867, p=6.08e-256\n"
+      "Spearman SD1 vs SD2: rho=0.831, p=0\n",
+      "Spearman CVI vs CSI: rho=0.841, p=0\n"
      ]
     }
    ],
@@ -235,11 +236,123 @@
     "print(f\"Spearman CVI vs CSI: rho={rho_cvi:.3f}, p={p_cvi:.3g}\")\n",
     "# ...existing code..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0d33c6a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Events file: sub-032_task-memory_events.tsv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_146410/2967103854.py:60: UserWarning: Tight layout not applied. tight_layout cannot make Axes height small enough to accommodate all Axes decorations.\n",
+      "  plt.tight_layout()\n",
+      "/tmp/ipykernel_146410/2967103854.py:82: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "  plt.tight_layout()\n",
+      "/tmp/ipykernel_146410/2967103854.py:82: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all Axes decorations.\n",
+      "  plt.tight_layout()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ...existing code...\n",
+    "# Load events (.tsv) from the subject task_data folder\n",
+    "from matplotlib.lines import Line2D\n",
+    "\n",
+    "events_path = next(data_folder.glob(f\"sub-{subject_id}_task-memory_*events.tsv\"), None)\n",
+    "if events_path is None:\n",
+    "    tsvs = list(data_folder.glob(\"*.tsv\"))\n",
+    "    events_path = tsvs[0] if tsvs else None\n",
+    "\n",
+    "events = None\n",
+    "onset_col = None\n",
+    "label_col = None\n",
+    "if events_path is not None:\n",
+    "    events = pd.read_csv(events_path, sep=\"\\t\")\n",
+    "    onset_col = next((c for c in [\"onset\", \"onsets\", \"time\"] if c in events.columns), None)\n",
+    "    label_col = next((c for c in [\"trial_type\", \"event\", \"label\", \"condition\"] if c in events.columns), None)\n",
+    "    if onset_col is None:\n",
+    "        print(f\"Events file found but no onset column: {events_path.name}\")\n",
+    "\n",
+    "print(f\"Events file: {events_path.name if events_path else 'None'}\")\n",
+    "\n",
+    "# Prepare colors per event type\n",
+    "labels = sorted(events[label_col].dropna().unique()) if (events is not None and label_col) else [\"Event\"]\n",
+    "cmap = plt.get_cmap(\"tab10\")\n",
+    "color_map = {lab: cmap(i % 10) for i, lab in enumerate(labels)}\n",
+    "\n",
+    "# Replot CSI/CVI with colored event lines + side legend\n",
+    "fig, axes = plt.subplots(2, 1, figsize=(10, 7), sharex=True)\n",
+    "axes[0].plot(t_C, SD1_win, label=\"SD1 (recentred)\", color=\"steelblue\")\n",
+    "axes[0].plot(t_C, SD2_win, label=\"SD2 (recentred)\", color=\"orange\")\n",
+    "axes[0].set_ylabel(\"SD (s)\")\n",
+    "axes[0].legend()\n",
+    "axes[0].set_title(\"Sliding SD1/SD2 (recentred)\")\n",
+    "\n",
+    "axes[1].plot(t_out, CVI_out, label=\"CVI\", color=\"green\")\n",
+    "axes[1].plot(t_out, CSI_out, label=\"CSI\", color=\"red\", alpha=0.8)\n",
+    "axes[1].set_ylabel(\"Index (a.u.)\")\n",
+    "line_legend = axes[1].legend(loc=\"upper right\")  # keep CVI/CSI legend\n",
+    "axes[1].set_title(\"Interpolated CSI/CVI at 4 Hz\")\n",
+    "axes[1].set_xlabel(\"Time (s)\")\n",
+    "\n",
+    "ev_plot = None\n",
+    "if events is not None and onset_col is not None:\n",
+    "    onsets = events[onset_col].astype(float)\n",
+    "    mask = (onsets >= t_out.min()) & (onsets <= t_out.max())\n",
+    "    ev_plot = events[mask]\n",
+    "    for _, ev in ev_plot.iterrows():\n",
+    "        t0 = float(ev[onset_col])\n",
+    "        lab = str(ev[label_col]) if label_col else \"Event\"\n",
+    "        color = color_map.get(lab, \"k\")\n",
+    "        axes[0].axvline(t0, color=color, linestyle=\"--\", alpha=0.6, linewidth=1.0)\n",
+    "        axes[1].axvline(t0, color=color, linestyle=\"--\", alpha=0.6, linewidth=1.0)\n",
+    "\n",
+    "# Side legend for event colors\n",
+    "handles = [Line2D([0], [0], color=color_map[lab], lw=2, linestyle=\"--\") for lab in labels]\n",
+    "event_legend = axes[1].legend(handles, labels, title=\"Events\", loc=\"center left\",\n",
+    "                              bbox_to_anchor=(1.02, 0.5), frameon=False)\n",
+    "axes[1].add_artist(line_legend)  # ensure both legends show\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# ECG trace with colored event lines + side legend\n",
+    "t_ecg = np.arange(len(ecg_signal)) / sampling_rate\n",
+    "fig, ax = plt.subplots(figsize=(12, 4))\n",
+    "ax.plot(t_ecg, ecg_signal, color=\"steelblue\", linewidth=0.8)\n",
+    "ax.set_title(\"ECG (task) with events\")\n",
+    "ax.set_xlabel(\"Time (s)\")\n",
+    "ax.set_ylabel(\"Volts\")\n",
+    "\n",
+    "if ev_plot is not None:\n",
+    "    for _, ev in ev_plot.iterrows():\n",
+    "        t0 = float(ev[onset_col])\n",
+    "        lab = str(ev[label_col]) if label_col else \"Event\"\n",
+    "        color = color_map.get(lab, \"k\")\n",
+    "        ax.axvline(t0, color=color, linestyle=\"--\", alpha=0.6, linewidth=1.0)\n",
+    "\n",
+    "handles = [Line2D([0], [0], color=color_map[lab], lw=2, linestyle=\"--\") for lab in labels]\n",
+    "ax.legend(handles, labels, title=\"Events\", loc=\"center left\",\n",
+    "          bbox_to_anchor=(1.02, 0.5), frameon=False)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neurocomp",
+   "display_name": "brain-heart",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
