--- a/code/digitspan/overview.ipynb
+++ b/code/digitspan/overview.ipynb
@@ -1089,7 +1089,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neurocomp",
+   "display_name": "brain-heart",
    "language": "python",
    "name": "python3"
   },
@@ -1103,7 +1103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
